# ai_provider_monitor

./: README.md  api_status.ino  gateway.py  hello.py  local_api.py  local_request.py  monitor.py  mqtt_status.duckdb  mqtt_status.duckdb.wal  next_gen.promts  pyproject.toml  server.py  tencent.py
static/: index.html
