[project]
name = "ai-provider-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "duckdb>=1.2.0",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "openai>=1.61.0",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
